--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,43 @@
 body {
   padding-top: 5rem;
   background: black;
+    color: white
 }
 .starter-template {
   padding: 3rem 1.5rem;
   text-align: center;
   color: white;
+    
+}
+
+
+/* Style all font awesome icons */
+.fa {
+  padding: 20px;
+  font-size: 50px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+
+    /* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.yeboi {
+    width: 100px;
+    length: 100px;
+}
 
 }
